...
                android:text="Name:"
                android:textColor="@color/my_gray_180"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/task_name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="Task name"
...
                android:text="Task Start:"
                android:textColor="@color/my_gray_180"
                app:layout_constraintStart_toStartOf="@+id/task_name_edit"
                app:layout_constraintTop_toBottomOf="@+id/task_name_edit" />

            <EditText
                android:id="@+id/task_start_date_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:ems="10"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:hint="Start date"
                android:inputType="date"
                android:textColor="@color/my_gray_240"
                android:text="@{viewModel.convertTimeMilliToDateString(viewModel.newStartTimeMillis)}"
                app:layout_constraintEnd_toStartOf="@+id/task_start_time_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@+id/task_name_edit"
                app:layout_constraintTop_toBottomOf="@+id/task_start" />

            <EditText
...
                android:text="Task End:"
                android:textColor="@color/my_gray_180"
                app:layout_constraintStart_toStartOf="@+id/task_start"
                app:layout_constraintTop_toBottomOf="@+id/task_start_date_edit" />

            <EditText
                android:id="@+id/task_end_date_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:tint="@color/yellow_400"
...
                android:focusable="false"
                android:gravity="center_horizontal"
                android:hint="End date"
                android:inputType="date"
                android:textColor="@color/my_gray_240"
                android:text="@{viewModel.convertTimeMilliToDateString(viewModel.newEndTimeMillis)}"
                app:layout_constraintEnd_toStartOf="@+id/task_end_time_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@+id/task_end_date"
                app:layout_constraintTop_toBottomOf="@+id/task_end_date" />

            <EditText
...
                android:text="Duration:"
                android:textColor="@color/my_gray_180"
                app:layout_constraintStart_toStartOf="@+id/task_end_date"
                app:layout_constraintTop_toBottomOf="@+id/task_end_time_edit" />

            <TextView
                android:id="@+id/task_duration_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="At least 5 minutes!!"
                android:textColor="@color/red_200"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@+id/task_duration"
                app:layout_constraintTop_toBottomOf="@+id/task_end_time_edit" />

            <EditText
                android:id="@+id/task_duration_day_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="center_horizontal"
...
                android:id="@+id/task_duration_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day"
                android:textColor="@color/my_gray_180"
                app:layout_constraintBottom_toBottomOf="@+id/task_duration_day_edit"
                app:layout_constraintEnd_toStartOf="@+id/task_duration_hour_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/task_duration_day_edit"
                app:layout_constraintTop_toTopOf="@+id/task_duration_day_edit"
                app:layout_constraintVertical_bias="0.478" />

            <EditText
...
            <TextView
                android:id="@+id/task_duration_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hour"
                android:textColor="@color/my_gray_180"
                app:layout_constraintEnd_toStartOf="@+id/task_duration_minute_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/task_duration_hour_edit"
                app:layout_constraintTop_toTopOf="@+id/task_duration_day" />

            <EditText
                android:id="@+id/task_duration_minute_edit"
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:text="@android:string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/task_save"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@+id/task_color_recycler"
                app:layout_constraintTop_toBottomOf="@+id/task_color_recycler" />

            <Button
                android:id="@+id/task_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Save"
                app:layout_constraintEnd_toEndOf="@+id/task_color_recycler"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/task_cancel"
                app:layout_constraintTop_toTopOf="@+id/task_cancel" />

            <androidx.recyclerview.widget.RecyclerView
...
