<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/projects_back_ground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/projects_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projects_app_bar">

        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/projects_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/projects_recycler"
            app:layout_constraintStart_toStartOf="@+id/projects_recycler"
            app:layout_constraintTop_toTopOf="@+id/projects_recycler" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/projects_add_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:src="@drawable/ic_add_black_24dp"
            android:tint="@color/blue_gray_900"
            app:layout_constraintBottom_toBottomOf="@+id/projects_recycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/blue_gray_900" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/projects_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu_personal_projects"
            app:title="Personal Projects" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>