...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gantt_tool_constrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/gantt_add_task"
                style="@style/GanttToolImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
...
                android:src="@drawable/ic_redo_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/gantt_undo"
                app:layout_constraintStart_toEndOf="@+id/gantt_undo"
                app:layout_constraintTop_toTopOf="@+id/gantt_undo" />

            <ImageButton
                android:id="@+id/gantt_save"
                style="@style/GanttToolImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_save_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/gantt_redo"
...
